--- a/templates/base/home.html
+++ b/templates/base/home.html
@@ -16,6 +16,6 @@
         <li>Gestionar usuarios y roles</li>
     </ul>
 
-    <h3>URL de Repositorio - Rama Master:</h3>
+    <h3>URL de Repositorio - Rama Master</h3>
     <p>https://github.com/unca-programacion3/asistencias.git</p>
 {% endblock %}
