--- a/templates/base/home.html
+++ b/templates/base/home.html
@@ -1,21 +1,19 @@
 {% extends "base/base.html" %}
-{% block titulo %}Home de Asistencias{% endblock %}
+{% block titulo %}Login{% endblock %}
 {% block contenido %}
-    <h2>Portada Principal</h2>
-    <h3>Descripción de la WebApp “Asistencias”</h3>
-    <p>
-        Una Institución de beneficencia otorga distintas ayudas a personas con escasos recursos,
-        según Programas definidos con anterioridad.
-    </p>
-    <h3>Requisitos principales:</h3>
-    <ul>
-        <li>Gestionar los tipos de asistencias que puede brindar un programa.</li>
-        <li>Gestionar los programas que brindan asistencia directa a las personas.</li>
-        <li>Gestionar las personas a quienes se le brinda asistencias.</li>
-        <li>Gestionar las asistencias otorgadas a cada persona.</li>
-        <li>Gestionar usuarios y roles</li>
-    </ul>
 
-    <h3>URL de Repositorio - Rama Master</h3>
-    <p>https://github.com/unca-programacion3/asistencias.git</p>
+    <h2>Ingresa tus datos</h2>
+
+    <br><br>
+
+    <form action="../pagina mantenimiento/Mantenimiento.html" method="post" style="display: grid; align-items: center; justify-content: center;">
+        <div class="mb-3">
+          <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Usuario" required>
+        </div>
+        <div class="mb-3">
+          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña" required>
+        </div>
+        <br><br>
+        <button type="submit" class="btn btn-primary">Ingresar</button>
+      </form>
 {% endblock %}
