--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -5,7 +5,7 @@
         <title>{% block titulo %}Gestión PTF{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-        <link rel="stylesheet" href=".E:\Universidad\3- Tercer Año\Programación 3\Repositorio personal\Laboratorio_Django\static\css\estilo.css">
+        <link rel="stylesheet" href="..\static\css\estilo.css">
     </head>
     <body>
         <div class="contenedor">
