--- a/templates/base/home.html
+++ b/templates/base/home.html
@@ -6,7 +6,7 @@
 
     <br><br>
 
-    <form action="../pagina mantenimiento/Mantenimiento.html" method="post" style="display: grid; align-items: center; justify-content: center;">
+    <form action="./pagina mantenimiento/Mantenimiento.html" method="post" style="display: grid; align-items: center; justify-content: center;">
         <div class="mb-3">
           <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Usuario" required>
         </div>
