--- a/gestion_trabajos_finales/templates/base/login.html
+++ b/gestion_trabajos_finales/templates/base/login.html
@@ -6,7 +6,7 @@
 
     <br><br>
 
-    <form action="./pagina mantenimiento/Mantenimiento.html" method="post" style="display: grid; align-items: center; justify-content: center;">
+    <form action="./home/" method="post" style="display: grid; align-items: center; justify-content: center;">
         <div class="mb-3">
           <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Usuario" required>
         </div>
@@ -15,5 +15,5 @@
         </div>
         <br><br>
         <button type="submit" class="btn btn-primary">Ingresar</button>
-      </form>
+    </form>
 {% endblock %}
