--- a/apps/persona/templates/docente_create.html
+++ b/apps/persona/templates/docente_create.html
@@ -5,9 +5,11 @@
   <br>
   <br>
   <br>
-  <form method="post" action="{% url 'persona:docente_create' %}">
+  <form method="get" action="{% url 'persona:docente_create' %}">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Guardar</button>
   </form>
+
+	<a href="{% url 'persona:docente_list' %}">VOLVER</a>
 {% endblock %}
