--- a/apps/persona/templates/docente_create.html
+++ b/apps/persona/templates/docente_create.html
@@ -5,7 +5,7 @@
   <br>
   <br>
   <br>
-  <form method="get" action="{% url 'persona:docente_create' %}">
+  <form method="post" action="{% url 'persona:docente_create' %}">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Guardar</button>
