--- a/gestion_trabajos_finales/templates/base/home.html
+++ b/gestion_trabajos_finales/templates/base/home.html
@@ -6,8 +6,7 @@
 
     <br><br>
 
-    <form action="./home/" method="post" style="display: grid; align-items: center; justify-content: center;">
-        {% csrf_token %}
+    <form action="./" method="post" style="display: grid; align-items: center; justify-content: center;">
         <div class="mb-3">
           <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Usuario" required>
         </div>
