--- a/apps/persona/templates/asesor_edit.html
+++ b/apps/persona/templates/asesor_edit.html
@@ -5,7 +5,7 @@
     <br>
     <br>
     <br>
-    <form method="post" action="{% url 'persona:asesor_edit' docente.id %}">
+    <form method="post" action="{% url 'persona:asesor_edit' asesor.id %}">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Guardar</button>
