--- a/apps/comision/templates/tribunal_create.html
+++ b/apps/comision/templates/tribunal_create.html
@@ -29,6 +29,8 @@
             var existingMembersCount = miembrosTable.rows.length;
             if (selectedDocente.value && existingMembersCount < 3) {
                 var row = document.createElement('tr');
+                row.dataset.id = selectedDocente.value; // Almacena el ID del miembro del tribunal como un atributo de datos en la fila
+
                 var cellNombre = document.createElement('td');
                 cellNombre.textContent = selectedDocente.text;
                 row.appendChild(cellNombre);
@@ -44,10 +46,31 @@
                 row.appendChild(cellEliminar);
 
                 miembrosTable.appendChild(row);
+
+                // Eliminar la opción seleccionada del combo
+                selectMiembros.remove(selectMiembros.selectedIndex);
             } else {
                 alert('No se pueden agregar más de 3 miembros al tribunal evaluador.');
             }
         });
+
+        document.getElementById('tribunal-form').addEventListener('submit', function(event) {
+            var hiddenInput = document.createElement('input');
+            hiddenInput.type = 'hidden';
+            hiddenInput.name = 'miembros'; // Nombre del campo en el formulario
+            hiddenInput.value = obtenerIdsMiembros();
+            document.getElementById('tribunal-form').appendChild(hiddenInput);
+        });
+
+        function obtenerIdsMiembros() {
+            var ids = [];
+            var filas = document.getElementById('miembros-table').getElementsByTagName('tr');
+            for (var i = 0; i < filas.length; i++) {
+                var id = filas[i].dataset.id; // El ID del miembro del tribunal se almacena como un atributo de datos en la fila
+                ids.push(id);
+            }
+            return ids.join(','); // Devuelve los IDs como una cadena separada por comas
+        }
     });
     </script>
     </html>
