--- a/apps/comision/templates/miembrote_detail.html
+++ b/apps/comision/templates/miembrote_detail.html
@@ -21,6 +21,6 @@
     </form>
     <br>
     <br>
-    <a href="{% url 'comision:miembrote_list' %}">VOLVER</a>
+    <a href="{% url 'comision:tribunal_detail' tribunal.id%}">VOLVER</a>
 
 {% endblock %}
