--- a/apps/comision/templates/miembrote_edit.html
+++ b/apps/comision/templates/miembrote_edit.html
@@ -1,12 +1,12 @@
 {% extends "base/base.html" %}
-{% block titulo %}Editar Tribunal Evaluador{% endblock %}
+{% block titulo %}Editar Miembro Tribunal Evaluador{% endblock %}
 {% block contenido %}
-{% block tituloBarra %}Editar Tribunal Evaluador{% endblock %}
+{% block tituloBarra %}Editar Miembro Tribunal Evaluador{% endblock %}
 <br><br><br>
-<form method="post" action="{% url 'comision:miembrote_edit' miembrote.id %}">
+<form method="post" action="{% url 'comision:miembrote_edit' miembrote.id tribunal.id%}">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Guardar</button>
 </form>
-<a href="{% url 'comision:miembrote_list' %}">VOLVER</a>
+<a href="{% url 'comision:tribunal_detail' tribunal.id %}">VOLVER</a>
 {% endblock %}
