--- a/gestion_trabajos_finales/templates/base/base.html
+++ b/gestion_trabajos_finales/templates/base/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{% block titulo %}Gestión PTF{% endblock %}</title>
+        <title>{% block titulo %}{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
         <link rel="stylesheet" href="..\static\css\estilo.css">
@@ -12,7 +12,7 @@
             <header>
                 <nav class="navbar navbar bg fixed-top" id="barra">
                     <div class="container-fluid">
-                      <a class="navbar-brand" href="#" id="titulo_barra">{% block tituloBarra %}Gestión PTF{% endblock %}</a>
+                      <a class="navbar-brand" href="#" id="titulo_barra">{% block tituloBarra %}{% endblock %}</a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
