--- a/apps/proyectotf/templates/proyectotf_list.html
+++ b/apps/proyectotf/templates/proyectotf_list.html
@@ -21,14 +21,14 @@
                 </tr>
             </thead>
             <tbody>
-            {% for proyectotf in proyectotfs %}
+            {% for proyecto in proyectotfs %}
                 <tr>
-                    <td scope="row"><a href="{% url 'proyectotf:proyectotf_detail' proyectotf.id %}">{{ proyectotf.proyecto_tf.titulo_ptf }}</a></td>
-                    <td>{{ proyectotf.proyecto_tf.descripcion }}</td>
-                    <td>{{ proyectotf.proyecto_tf.estado }}</td>
-                    <td>{{ proyectotf.alumno }}</td>
-										<td>{{ proyectotf.proyecto_tf.director }}</td>
-										<td>{{ proyectotf.proyecto_tf.fecha_presentacion }}</td>
+                    <td scope="row"><a href="{% url 'proyectotf:proyectotf_detail' proyecto.id %}">{{ proyecto.proyecto_tf.titulo_ptf }}</a></td>
+                    <td>{{ proyecto.proyecto_tf.descripcion }}</td>
+                    <td>{{ proyecto.proyecto_tf.estado }}</td>
+                    <td>{{ proyecto.alumno }}</td>
+										<td>{{ proyecto.proyecto_tf.director }}</td>
+										<td>{{ proyecto.proyecto_tf.fecha_presentacion }}</td>
                 </tr>
             {% endfor %}
             </tbody>
